Changelog for pdoTools.

2.0.0 rc3
==============
- New system settings to control the Fenom.

2.0.0 rc2
==============
- Compiled Fenom templates cached to RAM instead of HDD.
- Removed plugin pdoTools.

2.0.0 rc1
==============
- Added Fenom template engine.
- Fenom enabled by default.
- pdoParser uses Fenom to process pages.

1.11.2 pl
==============
- [#116] [pdoTitle] Disabled &register_js by default.

1.11.1 pl
==============
- [pdoSitemap] Fixed default url scheme after last update.

1.11.0 pl1
==============
- [pdoTitle] Added new snippet.
- [pdoPage] Added support of snippet pdoTitle when &ajaxMode is enabled.
- [pdoPage] Prevent overwriting of scripts and styles of nested &element by default parameters.
- [pdoPage] Added triggering javascript event "pdopage_load".

1.10.2 pl1
==============
- [#112] Parameter &scheme was set to system default in all snippets.
- [#111] [pdoPage] Added ability to set "prev" & "next" meta tags.
- [#107] [pdoNeighbors] Added ability to specify &parents for work.
- [#106] [pdoMenu] Fixed "hereClass" and "selfClass" enabled &useWeblinkUrl parameter.
- [#104] [pdoMenu] Snippet now using "pagetitle" for link titles if "titleOfLinks" is empty.

1.10.1 pl
==============
- [#108] [pdoFetch] Fixed E_ERROR when using &sortbyTV.
- [pdoFetch] Added new parameter &sortbyTVType.
- [pdoFetch] If &sortdirTV is not set it will be equal to &sortdir.

1.10.0 pl
==============
- [pdoMenu] Returned and fixed parameter &showDeleted.
- [pdoPage] Improved default javascript.
- [pdoPage] Fixed overwriting &frontend_js and &frontend_css parameters when &ajax is disabled.
- [pdoFetch] Ability to specify functions in select fields.
- [pdoTools] Ability to use compound quick placeholders.

1.10.0 beta4
==============
- [pdoPage] Ajax pagination out from the box.
- [pdoFetch] Improved log of getCollection.
- [pdoTools] Added tplOperator "contains".

1.9.7 pl
==============
- [#99] [pdoFetch] Fixed returning of primary key in "ids" mode.