@@ -29,3 +29,5 @@ $_lang['setting_pdotools_fenom_php'] = 'Allow PHP in Fenom';
 $_lang['setting_pdotools_fenom_php_desc'] = 'If enabled, you can use PHP functions in templates and chunks, for example {$.php.phpinfo()}.';
 $_lang['setting_pdotools_fenom_options'] = 'Fenom options';
 $_lang['setting_pdotools_fenom_options_desc'] = 'JSON string with array of settings described on <a href="https://github.com/fenom-template/fenom/blob/master/docs/en/configuration.md" target="_blank">official documentation</a>. For example: {"auto_escape":true,"force_include":true}';
+$_lang['setting_pdotools_fenom_cache'] = 'Caching compiled chunks';
+$_lang['setting_pdotools_fenom_cache_desc'] = 'If you use large and complex Fenom chunks, you can enable caching of its compiled versions. They will be updated only when you clear the system cache. Not recommended for the development of the site.';
