@@ -29,3 +29,5 @@ $_lang['setting_pdotools_fenom_php'] = 'Разрешить PHP в Fenom';
 $_lang['setting_pdotools_fenom_php_desc'] = 'В чанках и на страницах сайта можно использовать функции PHP для оформления, например {$.php.phpinfo()}.';
 $_lang['setting_pdotools_fenom_options'] = 'Настройки Fenom';
 $_lang['setting_pdotools_fenom_options_desc'] = 'JSON строка с массивом настроек согласно <a href="https://github.com/fenom-template/fenom/blob/master/docs/ru/configuration.md" target="_blank">официальной документации</a>. Например: {"auto_escape":true,"force_include":true}';
+$_lang['setting_pdotools_fenom_cache'] = 'Кэширование скомпилированных чанков';
+$_lang['setting_pdotools_fenom_cache_desc'] = 'Если вы используете большие и сложные чанки Fenom, то можно включить кэширование их скомпилированных версий. Они будут обновляться только при очистке системного кэша. Не рекомендуется при разработке сайта.';
