@@ -76,6 +76,7 @@ class pdoTools {
 			$this->config['scheme'] = $this->modx->getOption('link_tag_scheme');
 		}
 		$this->config['useFenom'] = $this->modx->getOption('pdotools_fenom_default', null, true);
+		$this->config['useFenomCache'] = $this->modx->getOption('pdotools_fenom_cache', null, false);
 	}
 
 
@@ -311,11 +312,9 @@ class pdoTools {
 				: '';
 		}
 
-		$content = $chunk['content'];
-		// Trying to process template with Fenom
-		if ($this->config['useFenom']) {
-			$content = $this->fenom($content, $properties);
-		}
+		$content = $this->config['useFenom']
+			? $this->fenom($chunk, $properties)
+			: $content = $chunk['content'];
 
 		if (strpos($content, '[[') !== false) {
 			// Processing quick placeholders
@@ -386,11 +385,9 @@ class pdoTools {
 				: '';
 		}
 
-		$content = $chunk['content'];
-		// Trying to process template with Fenom
-		if ($this->config['useFenom']) {
-			$content = $this->fenom($content, $properties);
-		}
+		$content = $this->config['useFenom']
+			? $this->fenom($chunk, $properties)
+			: $content = $chunk['content'];
 
 		if (strpos($content, '[[') !== false) {
 			$pl = $this->makePlaceholders($properties, '', $prefix, $suffix);
@@ -402,31 +399,70 @@ class pdoTools {
 
 
 	/**
-	 * @param string $content Raw html template with Fenom variables
+	 * @param string|array $chunk
 	 * @param array $properties
 	 *
 	 * @return mixed|string
 	 */
-	public function fenom($content, array $properties = array()) {
-		if (empty($this->config['useFenom']) || !is_string($content) || (strpos($content, '{$') === false && strpos($content, '{/') === false)) {
+	public function fenom($chunk, array $properties = array()) {
+		if (is_array($chunk)) {
+			if (empty($chunk['content'])) {
+				return $chunk;
+			}
+			else {
+				$content = trim($chunk['content']);
+			}
+		}
+		else {
+			$content = $chunk;
+		}
+		if (empty($this->config['useFenom']) || (strpos($content, '{$') === false && strpos($content, '{/') === false)) {
 			return $content;
 		}
 
 		if ($fenom = $this->getFenom()) {
-			$name = md5($content);
+			$name = '';
+			if (is_array($chunk)) {
+				if (!empty($chunk['binding'])) {
+					$name = $chunk['binding'] . '/';
+				}
+				if (!empty($chunk['id'])) {
+					$name .= $chunk['id'];
+				}
+				elseif (!empty($chunk['name'])) {
+					$name .= $chunk['name'];
+				}
+				else {
+					$name .= md5($content);
+				}
+			}
+			else {
+				$name = md5($content);
+			}
 			/** @var Fenom\Template $tpl */
 			if (!$tpl = $this->getStore($name, 'fenom')) {
-				try {
-					$tpl = $fenom->getRawTemplate()->source($name, $content, true);
-					$this->setStore($name, $tpl, 'fenom');
+				if (is_array($chunk) && !empty($this->config['useFenomCache'])) {
+					$cache_options = array(
+						'cache_key' => 'fenom/' . $name,
+					);
+					if (!$cache = $this->getCache($cache_options)) {
+						$tpl = $this->_compileChunk($content, $name);
+						$this->setCache($tpl->getTemplateCode(), $cache_options);
+					}
+					else {
+						$cache = preg_replace('#^<\?php#', '', $cache);
+						$tpl = eval($cache);
+					}
 				}
-				catch (Exception $e) {
-					$this->modx->log(modX::LOG_LEVEL_ERROR, $e->getMessage());
-					$this->modx->log(modX::LOG_LEVEL_INFO, $content);
+				else {
+					$tpl = $this->_compileChunk($content, $name);
+				}
+				if ($tpl) {
+					$this->setStore($name, $tpl, 'fenom');
 				}
 			}
 
-			if ($tpl instanceof Fenom\Template) {
+			if ($tpl instanceof Fenom\Render) {
 				$properties['_pls'] = $properties;
 				$properties['modx'] = $this->modx;
 				$properties['pdoTools'] = $this;
@@ -616,13 +652,14 @@ class pdoTools {
 			return $chunk;
 		}
 
+		$id = 0;
 		/** @var modChunk $element */
 		switch ($binding) {
 			case 'CODE':
 			case 'INLINE':
-				$element = $this->modx->newObject('modChunk', array('name' => md5($name)));
+				$element = $this->modx->newObject('modChunk', array('name' => $cache_name));
 				$element->setContent($content);
-				$this->addTime('Created inline chunk');
+				$this->addTime('Created inline chunk with name "'.$cache_name.'"');
 				break;
 			case 'FILE':
 				$path = !empty($this->config['tplPath'])
@@ -637,7 +674,7 @@ class pdoTools {
 					$this->addTime('Allowed extensions for @FILE chunks is "html" and "tpl"');
 				}
 				elseif ($content = file_get_contents($path)) {
-					$element = $this->modx->newObject('modChunk', array('name' => md5($name)));
+					$element = $this->modx->newObject('modChunk', array('name' => $cache_name));
 					$element->setContent($content);
 					$this->addTime('Loaded chunk from "'.str_replace(MODX_BASE_PATH, '', $path).'"');
 				}
@@ -646,22 +683,26 @@ class pdoTools {
 				/** @var modTemplate $template */
 				if ($template = $this->modx->getObject('modTemplate', array('id' => $content, 'OR:templatename:=' => $content))) {
 					$content = $template->getContent();
-					$element = $this->modx->newObject('modChunk', array('name' => md5($name)));
+					$element = $this->modx->newObject('modChunk', array('name' => $cache_name));
 					$element->setContent($content);
 					$this->addTime('Created chunk from template "'.$template->templatename.'"');
+					$id = $template->get('id');
 				}
 				break;
 			case 'CHUNK':
-				$name = $content;
-				if ($element = $this->modx->getObject('modChunk', array('name' => $name))) {
+				$cache_name = $content;
+				if ($element = $this->modx->getObject('modChunk', array('name' => $cache_name))) {
 					$content = $element->getContent();
-					$this->addTime('Loaded chunk "'.$name.'"');
+					$this->addTime('Loaded chunk "'.$cache_name.'"');
+					$id = $element->get('id');
 				}
 				break;
 			default:
-				if ($element = $this->modx->getObject('modChunk', array('name' => $name))) {
+				if ($element = $this->modx->getObject('modChunk', array('name' => $cache_name))) {
 					$content = $element->getContent();
-					$this->addTime('Loaded chunk "'.$name.'"');
+					$this->addTime('Loaded chunk "'.$cache_name.'"');
+					$binding = 'CHUNK';
+					$id = $element->get('id');
 				}
 		}
 
@@ -691,10 +732,41 @@ class pdoTools {
 			'object' => $element,
 			'content' => $content,
 			'placeholders' => $placeholders,
+			'name' => $cache_name,
+			'id' => $id,
+			'binding' => strtolower($binding),
 		);
 
 		$this->setStore($cache_name, $chunk, 'chunk');
 		return $chunk;
+	}
+
+
+	/**
+	 * Compiles Fenom chunk
+	 *
+	 * @param $content
+	 * @param string $name
+	 *
+	 * @return bool|\Fenom\Template
+	 */
+	protected function _compileChunk($content, $name = '') {
+		$tpl = false;
+		if ($fenom = $this->getFenom()) {
+			if (empty($name)) {
+				$name = md5($content);
+			}
+			try {
+				$tpl = $fenom->getRawTemplate()->source($name, $content, true);
+			}
+			catch (Exception $e) {
+				$this->modx->log(modX::LOG_LEVEL_ERROR, $e->getMessage());
+				$this->modx->log(modX::LOG_LEVEL_INFO, $content);
+			}
+		}
+		$this->addTime('Compiled Fenom chunk with name "'.$name.'"');
+
+		return $tpl;
 	}
 
 
@@ -933,19 +1005,19 @@ class pdoTools {
 	 */
 	public function getCache($options = array()) {
 		$cacheKey = $this->getCacheKey($options);
-		$cacheOptions = $this->getCacheOptions();
+		$cacheOptions = $this->getCacheOptions($options);
 
 		$cached = '';
 		if (!empty($cacheOptions) && !empty($cacheKey) && $this->modx->getCacheManager()) {
 			if ($cached = $this->modx->cacheManager->get($cacheKey, $cacheOptions)) {
-				$this->addTime('Retrieved data from cache "' . $cacheOptions[xPDO::OPT_CACHE_KEY] . $cacheKey . '"');
+				$this->addTime('Retrieved data from cache "' . $cacheOptions[xPDO::OPT_CACHE_KEY] .'/'. $cacheKey . '"');
 			}
 			else {
-				$this->addTime('No cached data for key "' . $cacheOptions[xPDO::OPT_CACHE_KEY] . $cacheKey . '"');
+				$this->addTime('No cached data for key "' . $cacheOptions[xPDO::OPT_CACHE_KEY] .'/'. $cacheKey . '"');
 			}
 		}
 		else {
-			$this->addTime('Could not check cached data for key "' . $cacheOptions[xPDO::OPT_CACHE_KEY] . $cacheKey . '"');
+			$this->addTime('Could not check cached data for key "' . $cacheOptions[xPDO::OPT_CACHE_KEY] .'/'. $cacheKey . '"');
 		}
 
 		return $cached;
@@ -955,14 +1027,14 @@ class pdoTools {
 	/**
 	 * Sets data to cache
 	 *
-	 * @param array $data
+	 * @param mixed $data
 	 * @param mixed $options
 	 *
 	 * @return string $cacheKey
 	 */
 	public function setCache($data = array(), $options = array()) {
 		$cacheKey = $this->getCacheKey($options);
-		$cacheOptions = $this->getCacheOptions();
+		$cacheOptions = $this->getCacheOptions($options);
 
 		if (!empty($cacheKey) && !empty($cacheOptions) && $this->modx->getCacheManager()) {
 			$this->modx->cacheManager->set(
@@ -971,7 +1043,7 @@ class pdoTools {
 				$cacheOptions[xPDO::OPT_CACHE_EXPIRES],
 				$cacheOptions
 			);
-			$this->addTime('Saved data to cache "' . $cacheOptions[xPDO::OPT_CACHE_KEY] . $cacheKey . '"');
+			$this->addTime('Saved data to cache "' . $cacheOptions[xPDO::OPT_CACHE_KEY] .'/'. $cacheKey . '"');
 		}
 
 		return $cacheKey;
@@ -981,22 +1053,26 @@ class pdoTools {
 	/**
 	 * Returns array with options for cache
 	 *
+	 * @param $options
+	 *
 	 * @return array
 	 */
-	protected function getCacheOptions() {
+	protected function getCacheOptions($options = array()) {
+		if (empty($options)) {$options = $this->config;}
+
 		$cacheOptions = array(
-			xPDO::OPT_CACHE_KEY => !empty($this->config['cache_key'])
-				? $this->config['cache_key']
+			xPDO::OPT_CACHE_KEY => !empty($options['cache_key'])
+				? 'default'
 				: (!empty($this->modx->resource)
 					? $this->modx->getOption('cache_resource_key', null, 'resource')
 					: 'default'),
 
-			xPDO::OPT_CACHE_HANDLER => !empty($this->config['cache_handler'])
-				? $this->config['cache_handler']
+			xPDO::OPT_CACHE_HANDLER => !empty($options['cache_handler'])
+				? $options['cache_handler']
 				: $this->modx->getOption('cache_resource_handler', null, 'xPDOFileCache'),
 
-			xPDO::OPT_CACHE_EXPIRES => $this->config['cacheTime'] !== ''
-				? (integer) $this->config['cacheTime']
+			xPDO::OPT_CACHE_EXPIRES => $options['cacheTime'] !== ''
+				? (integer) $options['cacheTime']
 				: (integer) $this-> modx->getOption('cache_resource_expires', null, 0),
 		);
 
@@ -1013,6 +1089,10 @@ class pdoTools {
 	 */
 	protected function getCacheKey($options = array()) {
 		if (empty($options)) {$options = $this->config;}
+
+		if (!empty($options['cache_key'])) {
+			return $options['cache_key'];
+		}
 
 		$key = !empty($this->modx->resource)
 			? $this->modx->resource->getCacheKey()
